# nt-espidf-project-tools

./: AsciiArtComprehensiveTest.cpp  AsciiComprehensiveTest  GpioComprehensiveTest.cpp  GpioComprehensiveTest.h  GpioComprehensiveTest_Sectioned.cpp  LoggerComprehensiveTest  LoggerComprehensiveTest.cpp  Makefile  PwmComprehensiveTest.cpp  PwmComprehensiveTest.h  PwmTestUsageExamples.cpp  README.md  README_GPIO_SECTIONED_TEST.md  README_PWM_COMPREHENSIVE_TEST.md  TEST_README.md  build_app.sh  build_spi_test.sh  config_loader.sh  detect_ports.sh  flash_app.sh  generate_matrix.py  get_app_info.py  gpio_test_config.json  manage_idf.sh  requirements.txt  run_gpio_tests.py  setup_ci.sh  setup_common.sh  setup_project.sh  setup_repo.sh  simple_test.sh  test_build_system.sh  verify_build_system.sh
.github/: README.md
.github/workflows/: tools-ci.yml
docs/: README_BUILD_SYSTEM.md  README_CENTRALIZED_CONFIG.md  README_CI_PIPELINE.md  README_CONFIG_SYSTEM.md  README_FLASH_SYSTEM.md  README_LOGGING_SYSTEM.md  README_MULTI_VERSION_IDF.md  README_PORT_DETECTION.md  README_SCRIPTS_OVERVIEW.md  README_UTILITY_SCRIPTS.md
examples/esp32/: CMakeLists.txt  README_PIO_SECTIONED_TESTS.md  README_SECTIONED_TESTS.md  app_config.yml
examples/esp32/main/: BluetoothComprehensiveTest.cpp  CMakeLists.txt  I2cComprehensiveTest.cpp  Kconfig.projbuild  PioComprehensiveTest.cpp  WifiComprehensiveTest.cpp  gpio_test.c
examples/esp32/scripts/: build_app.sh  manage_logs.sh  setup_common.sh
main/: README_SPI_TEST.md  SpiComprehensiveTest.cpp  app_config_spi_test.yml
